fix star alignment

--- a/static/css/ideaDetails.css
+++ b/static/css/ideaDetails.css
@@ -4,11 +4,11 @@
 }
 
 .fa-star{
-    display: flex; 
-    float: right; 
-    padding-top: 2px; 
-    padding-left: 5px; 
-    color: #009688;
+    display: flex !important; 
+    float: right !important; 
+    padding-top: 7px !important; 
+    padding-left: 5px !important; 
+    color: #009688 !important;
 }
 
 .rating-number{
